# pingpong

./: .gitignore  CMakeLists.txt  README.md  client  client.c  dependences.dot  graphic.py  makefile  server  server.c
.github/workflows/: test.yml
data/: graphic.py  graphic_with_bloxplot.py  main.py  time_file1
include/: pipe.h  socket.h  utils.h
src/: client.c  main  main_client.c  main_server.c  pipe.c  server.c  socket.c  utils.c
